--- a/administration/templates/bio.html
+++ b/administration/templates/bio.html
@@ -7,7 +7,7 @@
             <h4 class="modal-title"><b>Admin Profile</b></h4>
           </div>
           <div class="modal-body">
-            <form class="form-horizontal" method="POST" action="profile_update.php?return={% url 'adminDashboard' %}" enctype="multipart/form-data">
+            <form class="form-horizontal" method="POST" action="profile_update.php?return={% url 'userDashboard' %}" enctype="multipart/form-data">
               
               <!-- Form For Update Goes Here -->
           </div>
